# Atra-Framework

./: .gitignore  CMakeLists.txt  CMakePresets.json  atributy.json  controlTypes.json  output.json  readme.md  uml.plantuml
jsonFiles/: attributes.json  controlTypes.json
src/: Makefile  gg.cpp  main.cpp
src/libs/: Atribut.h  AtributChar.h  AtributDouble.h  AtributInt.h  CharInput.h  DoubleSlider.h  Formular.h  HodnotaAtributu.h  Hodnoty.h  IntSlider.h  OvladaciPrvok.h  OvladaciPrvokChar.h  OvladaciPrvokDouble.h  OvladaciPrvokInt.h  PopisAtributu.h  PopisAtributu_char.h  PopisAtributu_double.h  PopisAtributu_int.h  Popisy.h  TypAtributu.h  TypPrvkuInt.h
src/libs/Atributy/: Atribut.h  Hodnoty.h
src/libs/Headers/Atributes/: Atribute.h  Values.h
src/libs/Headers/Attributes/: Attribute.h  AttributeFactory.h  Attributes.h  AttributesContainer.h  ImplementedAttribute.h
src/libs/Headers/Basic/: GlobalLastIdOfObject.h  Messages.h
src/libs/Headers/ControlComponents/: CharacterInput.h  ControlComponent.h  ControlComponentCluster.h  ControlComponentsContainer.h  Factory.h  Formular.h  LogicInput.h  NumericInput.h
src/libs/Headers/Descriptions/: AtributeDescription.h  AttributeDescription.h  AttributeDescriptions.h  AttributeDescriptionsComplete.h  AttributeDescriptionsContainer.h  AttributesDescriptionsContainer.h  DescriptionFactory.h  Descriptions.h  ImplementedAttributeDescriptions.h
src/libs/OvladaciePrvky/: CharacterInput.h  Formular.h  NumericInput.h  OvladaciPrvok.h
src/libs/Popisy/: PopisAtributu.h  TypAtributu.h
src/libs/Sources/Atributes/: Values.cpp
src/libs/Sources/Attributes/: Attribute.cpp  AttributeFactory.cpp  Attributes.cpp  AttributesContainer.cpp  ImplementedAttribute.cpp
src/libs/Sources/Basic/: GlobalLastIdOfObject.cpp
src/libs/Sources/ControlComponents/: ControlComponents.cpp  ControlComponentsCluster.cpp  ControlComponentsContainer.cpp  Factory.cpp  Formular.cpp  NumericInput.cpp
src/libs/Sources/Descriptions/: AtributeDescription.cpp  AttributeDescription.cpp  AttributeDescriptions.cpp  AttributeDescriptionsContainer.cpp  Descriptions.cpp  ImplementedAttributeDescriptions.cpp
